--- a/css/main.css
+++ b/css/main.css
@@ -50,7 +50,6 @@ p {
 
 /*The widths are in a percentage!*/
 header {
-	/*height: 110px; remove all fixed heights*/
 	border-bottom: 3px solid #77a466;
 	margin: 0 auto;
 	display: flex;
@@ -60,9 +59,11 @@ header {
 }
 
 header h1 {
-	/*float: left; remove all floats*/
 	margin: 0;
 	padding: 38px 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 
 }
 header h1 span {
@@ -70,8 +71,10 @@ header h1 span {
 }
 
 header nav {
-	/*float: right;*/
 	padding: 46px 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 }
 header nav ul {
 	margin: 0;
@@ -93,7 +96,6 @@ header nav ul li a{
 .top-section,
 .bottom-section {
 	margin: 0 auto;
-	/*clear: both;*/
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -101,10 +103,6 @@ header nav ul li a{
 
 }
 
-.main-image {
-	/*height: auto;*/
-	/*float: left;*/
-}
 .main-image img {
 	display:flex;
 	width: 100%;
@@ -112,10 +110,6 @@ header nav ul li a{
 
 }
 
-.main-title {
-	/*height: auto;*/
-	/*float: left;*/
-}
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
@@ -131,33 +125,26 @@ header nav ul li a{
 .section-two,
 .section-three {
 	width: 100%;
-	/*height: auto;*/
-	/*float: left;*/
 	border-top: 1px solid #eee;
 }
 
 .section-one h4 {
 	padding: 10px 0;
 }
+.section-one h4,li{
+display: flex;
+justify-content: center;
 
-.section-two {
-	/*border-left: 1px solid #eee;
-	border-right: 1px solid #eee;*/
 }
-
-.section-two h4,
-.section-three h4 {
-	/*padding: 10px 30px;*/
-}
-
-.section-two p,
-.section-three p {
-	/*padding: 10px 30px;*/
+.section-two h4,p{
 	display: flex;
-	justify-content: flex-start;
-	padding-left:1px;
+	justify-content: center;
 }
 
+.section-three h4,p{
+	display: flex;
+	justify-content: center;	
+}
 .menu {
 	list-style: none;
 	padding: 0;
@@ -180,10 +167,8 @@ header nav ul li a{
 
 /*The widths are in a percentage!*/
 footer {
-	/*height: 50px;*/
 	border-top: 3px solid #eee;
 	margin: 0 auto;
-	/*clear: both;*/
 	text-align: center;
 	display: flex;
 	justify-content: center;
