--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,8 @@ p {
 /*The widths are in a percentage!*/
 header {
 	border-bottom: 3px solid #77a466;
-	margin: 0 auto;
+	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -60,21 +61,17 @@ header {
 
 header h1 {
 	margin: 0;
-	padding: 38px 0;
+	padding: 38px 20px 20px 20px;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-
+	border-bottom: 3px solid #77a466;
 }
 header h1 span {
 	color: #77a466;
 }
 
 header nav {
-	padding: 46px 0;
+	padding: 20px 0;
 	width: 100%;
-	display: flex;
-	justify-content: center;
 }
 header nav ul {
 	margin: 0;
@@ -83,9 +80,9 @@ header nav ul {
 header nav ul li {
 	text-transform: uppercase;
 	font-weight: 700;
-	font-size: 0.87em;
+	font-size: 0.875em;
 	padding: 10px 0px;
-	display: block;
+	list-style: none;
 }
 header nav ul li a{
 	text-decoration: none;
@@ -95,7 +92,6 @@ header nav ul li a{
 /*The widths are in a percentage!*/
 .top-section,
 .bottom-section {
-	margin: 0 auto;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -104,16 +100,15 @@ header nav ul li a{
 }
 
 .main-image img {
-	display:flex;
 	width: 100%;
 	border-bottom: 3px solid #77a466;
-
 }
 
 .main-title h3 {
 	text-align: left;
 	padding: 5px 0;
 	color: #77a466;
+	font-size: 1.125em;
 }
 .main-title p {
 	padding: 0;
@@ -128,23 +123,10 @@ header nav ul li a{
 	border-top: 1px solid #eee;
 }
 
-.section-one h4 {
-	padding: 10px 0;
-}
-.section-one h4,li{
-display: flex;
-justify-content: center;
-
-}
-.section-two h4,p{
-	display: flex;
-	justify-content: center;
+.section-two p,.section-three p{
+	padding-left: 0px;
 }
 
-.section-three h4,p{
-	display: flex;
-	justify-content: center;	
-}
 .menu {
 	list-style: none;
 	padding: 0;
@@ -168,8 +150,8 @@ justify-content: center;
 /*The widths are in a percentage!*/
 footer {
 	border-top: 3px solid #eee;
-	margin: 0 auto;
 	text-align: center;
+	width: 100%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -179,5 +161,62 @@ footer span {
 	font-family: 'Galada', cursive;
 	text-transform: lowercase;
 	color: #77a466;
-	font-size: 0.87em;
+	font-size: 0.875em;
+}
+
+@media all and (min-width:768px) {
+/*Tablet media query*/
+ .bottom-section{
+	align-items: flex-start;
+	justify-content: space-between;
+	border-top:1px solid #eee;
+	}
+ .section-one,
+ .section-two,
+ .section-three{
+	flex-basis: 30%;
+	border-top: none;
+ }
+
+.section-two{
+	border-left: 1px solid #eee;
+	border-right: 1px solid #eee;
+	padding: 0 20px;
+}
+
+.section-two p,.section-three p{
+	padding-left: 0px;
+}
+
+}
+
+@media all and (min-width:1200px) {
+/*Desktop media query*/
+header{
+justify-content: space-between;
+}
+
+header nav ul {
+display: flex;
+justify-content: space-between;
+}
+
+header nav{
+	width: 40%;
+}
+
+header h1{
+width: 30%;
+display: flex;
+justify-content: flex-start;
+border-bottom: none;
+padding-left: 0;
+padding-top: 10px;
+}
+
+header h1 span {
+padding-right: 10px;
+}
+
+
 }
